[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/chest_00.png" type="Texture" id=1]
[ext_resource path="res://assets/nimbus-sans-l_bold-condensed.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/chest.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 34.9812

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "press_f"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lbPressF:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lbPressF:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.878431, 0.647059, 0.647059, 1 ), Color( 1, 1, 1, 1 ), Color( 0.623529, 0.909804, 0.607843, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Chest" type="Node2D" groups=[
"LootChests",
]]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.5 )
texture = ExtResource( 1 )

[node name="lbPressF" type="Label" parent="."]
modulate = Color( 0.623529, 0.909804, 0.607843, 1 )
margin_left = -9.52982
margin_top = -72.1125
margin_right = 5.47018
margin_bottom = -32.1125
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.807843, 0, 1 )
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press_f = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
